refactor: resolve code smell